--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,10 +34,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/FerreteriaMVC
 excludes=
 file.reference.mysql-connector-j-9.2.0.jar=C:\\Users\\Dell Notebook\\Desktop\\Conector\\mysql-connector-j-9.2.0.jar
+file.reference.mysql-connector-j-9.2.0.jar-1=..\\..\\Downloads\\Conector\\mysql-connector-j-9.2.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-j-9.2.0.jar}
+    ${file.reference.mysql-connector-j-9.2.0.jar}:\
+    ${file.reference.mysql-connector-j-9.2.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=\ --enable-preview
 javac.deprecation=false
