--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,11 +35,13 @@ dist.jlink.output=${dist.jlink.dir}/FerreteriaMVC
 excludes=
 file.reference.mysql-connector-j-9.2.0.jar=C:\\Users\\Dell Notebook\\Desktop\\Conector\\mysql-connector-j-9.2.0.jar
 file.reference.mysql-connector-j-9.2.0.jar-1=..\\..\\Downloads\\Conector\\mysql-connector-j-9.2.0.jar
+file.reference.mysql-connector-j-9.2.0.jar-2=..\\..\\..\\Downloads\\Conector\\mysql-connector-j-9.2.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-j-9.2.0.jar}:\
-    ${file.reference.mysql-connector-j-9.2.0.jar-1}
+    ${file.reference.mysql-connector-j-9.2.0.jar-1}:\
+    ${file.reference.mysql-connector-j-9.2.0.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=\ --enable-preview
 javac.deprecation=false
