--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,30 +28,42 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/FerreteriaMVC.jar
+dist.jar=${dist.dir}/FerreteriaMVC_2.3.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/FerreteriaMVC
+dist.jlink.output=${dist.jlink.dir}/FerreteriaMVC_2.3
 excludes=
-file.reference.mysql-connector-j-9.2.0.jar=C:\\Users\\Dell Notebook\\Desktop\\Conector\\mysql-connector-j-9.2.0.jar
-file.reference.mysql-connector-j-9.2.0.jar-1=..\\..\\Downloads\\Conector\\mysql-connector-j-9.2.0.jar
-file.reference.mysql-connector-j-9.2.0.jar-2=..\\..\\..\\Downloads\\Conector\\mysql-connector-j-9.2.0.jar
+file.reference.jcalendar-1.4.jar=C:\\Users\\Gena\\OneDrive - UNAN-Managua\\Escritorio\\SelctCal\\SelectorCalendario\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=../SelectorCalendario/jcalendar-1.4.jar
+file.reference.json-20231013.jar=..\\..\\Videos\\erramientS JAR\\json-20231013.jar
+file.reference.kotlin-stdlib-1.9.0.jar=..\\..\\Videos\\erramientS JAR\\kotlin-stdlib-1.9.0.jar
+file.reference.mysql-connector-j-9.2.0.jar=C:\\Users\\Gena\\OneDrive - UNAN-Managua\\Escritorio\\Conector\\mysql-connector-j-9.2.0.jar
+file.reference.mysql-connector-j-9.2.0.jar-1=..\\Conector\\mysql-connector-j-9.2.0.jar
+file.reference.mysql-connector-j-9.2.0.jar-2=..\\..\\Videos\\erramientS JAR\\mysql-connector-j-9.2.0.jar
+file.reference.okhttp-4.10.0.jar=..\\..\\Videos\\erramientS JAR\\okhttp-4.10.0.jar
+file.reference.okio-2.10.0.jar=..\\..\\Videos\\erramientS JAR\\okio-2.10.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-j-9.2.0.jar}:\
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.jcalendar-1.4.jar-1}:\
     ${file.reference.mysql-connector-j-9.2.0.jar-1}:\
-    ${file.reference.mysql-connector-j-9.2.0.jar-2}
+    ${file.reference.json-20231013.jar}:\
+    ${file.reference.kotlin-stdlib-1.9.0.jar}:\
+    ${file.reference.mysql-connector-j-9.2.0.jar-2}:\
+    ${file.reference.okhttp-4.10.0.jar}:\
+    ${file.reference.okio-2.10.0.jar}
 # Space-separated list of extra javac options
-javac.compilerargs=\ --enable-preview
+javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
 javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=21
-javac.target=21
+javac.source=23
+javac.target=23
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -76,7 +88,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=FerreteriaMVC
+jlink.launcher.name=FerreteriaMVC_2.3
 main.class=Util.ConexionDB
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
@@ -88,7 +100,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=\ --enable-preview
+run.jvmargs=
 run.modulepath=\
     ${javac.modulepath}
 run.test.classpath=\
